--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY=django-insecure-)y39a1fjsm5e6hxvl6f=2a8pp=sbj8wgqt3dq*06kmy#1g0%0$
 DEBUG=False
-ALLOWED_HOSTS=localhost,127.0.0.1,expense-tracker-r8xj.onrender.com
+ALLOWED_HOSTS=localhost,127.0.0.1,https://expense-tracker-9n2i.onrender.com
